# owasp10lab

./: README.md  app.py  bootstrap.py  pyproject.toml  requirements.txt
instance/: test.db
templates/: admin_dashboard.html  base.html  dashboard.html  login.html  register.html
